--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -341,7 +341,12 @@ Additionally, a larger sample size makes the sample estimate ($s^2$) of the popu
 
 ## Precision for other statistics
 
+Whenver we use a statistic (e.g., $\bar{x}$) to a estimate population-level parameter (e.g., $\me$) the statistic will differ from the parameters due to sampling error. This is true of all statistics. Therefore, it is possible to generate a sampling distribution for all statistics. A key factor influencing how close a statistics falls to the population parameter is the sample size.
 
+Consider the case of estimating the standardized mean difference (i.e., $\delta$)  between heights of males and female, illustrated in Figure \@ref(fig:ddistributions). The population-level heights information are presented Figure \@ref(fig:ddistributions)A. The sampling distribution for sample-level $d_{unbiased}$ values when you use 10 people per group (10 males, 10 females) in presented in Figure \@ref(fig:ddistributions)B. You can see in this scenario that even though the population-level standardize mean difference is 1.49 ($\delta$ = 1.49) there was considerably variability in sample-level $d_{unbiased}$ values. Indeed, inspecting the sample-level data reveals when the population difference is $\delta$ = 1.49, the sample level differences range from $d_{unbiased}$ = -0.38 to $d_{unbiased}$ = 5.50. That's a considerable range. When $d_{unbiased}$ = -0.38 you would conclude, in your study, that the mean female height is .38 standard deviations higher than than the mean male height. Yet a colleague, conducting exactly the same study, could obtain a sample that leads him to observe $d_{unbiased}$ = 5.50. This would indicate to him that the mean male height is 5.50 standard deviations higher than the mean female height. The results of both you study and the colleagues study differ considerably from the truth that $\delta$ = 1.49 and the mean male height is 1.49 standard deviations higher than the mean female height. This illustrates two important points. First, drawing any conclusion from a single study is problematic. Typically, we can't learn much or make strong conclusions form a single study. Second, drawing conclusions from small sample size studies (e.g., $n$ = 10 per group) is extraordinarily problematic.
+
+We investigated the extent to which study-level $d_{unbiased}$ values differ from the population $\delta$ = 1.49 when using 100 people per group for the comparison (i.e., 100 males, 100 females).
+You can see in Figure \@ref(fig:ddistributions)C than in this scenario the precision of the sample estimates ($d_{unbiased}$) of the population parameter ($\delta$) still vary considerably  - but substantially less than they did when it was 10 per group. With a 100 people per group, the $d_{unbiased}$ values range from 0.91 to 2.21.  For the lower end of this range, 0.91, a researcher would conclude that the mean for males is .91 standard deviations higher than the mean for females. At the upper end of this range, 2.21, a researcher would conclude that the mean for males is 2.21 standard deviations higher than the mean for females. The variability is still large - but at least the conclusions are a) all in the same direction b) would all be considered large (i.e, above 0.80) according to Cohen's standards.
 
 
 ```{r, echo = FALSE, eval = FALSE}
