--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -333,7 +333,7 @@ gridExtra::grid.arrange(pg,sdg, sd2g, nrow=3)
 dev.off()
 ```
 
-```{r threedist, echo = FALSE, out.width = "80%", fig.scap = "Two sampling distributions for variability in means based on sample size", fig.cap = "Two sampling distributions for variability in means based on sample size. The top graph show the variance of individual's heights in the population. The graph is filled with X's to remind you it is a graph of individuals. There are more individuals than X's. The bottom two graphs show variability in sample means due to random sampling. Each graph is a sampling distribution for a given sample size. Each sampling distribution contains 50000 means. Each sample mean is the average of the heights of individuals in the sample. The sampling distributions are filled with $\\bar{x}$'s to remind you that it is sample means being graphed. There are more means than $\\bar{x}$'s. You can see that by using a larger sample size ($n = 50$) there is less variability in sample means than when using a smaller sample size ($n = 10$)."}
+```{r threedist, echo = FALSE, out.width = "80%", fig.scap = "Two sampling distributions illustrating variability in sample means based on sample size", fig.cap = "Two sampling distributions illustrating variability in sample means based on sample size. The top graph show the variance of individual's heights in the population. The graph is filled with X's to remind you it is a graph of individuals. There are more individuals than X's. The bottom two graphs show variability in sample means due to random sampling. Each of the lower two graphs is a sampling distribution for a given sample size. Each sampling distribution contains 50000 sample means. Each sample mean is the average of the heights of individuals in a sample. The sampling distributions are filled with $\\bar{x}$'s to remind you that it is sample means being graphed. There are more means than $\\bar{x}$'s. You can see that by using a larger sample size ($n = 50$, for 50000 samples) there is less variability in sample means than when using a smaller sample size ($n = 10$), for 50000 samples."}
 knitr::include_graphics("ch_samples_precision/images/sampling_mdist.png")
 ```
 
