--- a/packages.bib
+++ b/packages.bib
@@ -13,40 +13,6 @@
   note = {R package version 0.19.1},
   url = {https://github.com/rstudio/bookdown},
 }
-@Manual{R-dplyr,
-  title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2020},
-  note = {R package version 1.0.0},
-  url = {https://CRAN.R-project.org/package=dplyr},
-}
-@Manual{R-emoGG,
-  title = {emoGG: Use Emoji in ggplot2},
-  author = {David L Miller},
-  year = {2020},
-  note = {R package version 0.0.2},
-}
-@Manual{R-forcats,
-  title = {forcats: Tools for Working with Categorical Variables (Factors)},
-  author = {Hadley Wickham},
-  year = {2020},
-  note = {R package version 0.5.0},
-  url = {https://CRAN.R-project.org/package=forcats},
-}
-@Manual{R-ggplot2,
-  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2020},
-  note = {R package version 3.3.2},
-  url = {https://CRAN.R-project.org/package=ggplot2},
-}
-@Manual{R-janitor,
-  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
-  author = {Sam Firke},
-  year = {2020},
-  note = {R package version 2.0.1},
-  url = {https://CRAN.R-project.org/package=janitor},
-}
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
@@ -54,32 +20,12 @@
   note = {R package version 1.28},
   url = {https://CRAN.R-project.org/package=knitr},
 }
-@Manual{R-learnSampling,
-  title = {learnSampling: Tools to help learn sampling},
-  author = {David J. Stanley},
+@Manual{R-MBESS,
+  title = {MBESS: The MBESS R Package},
+  author = {Ken Kelley},
   year = {2020},
-  note = {R package version 0.2},
-}
-@Manual{R-purrr,
-  title = {purrr: Functional Programming Tools},
-  author = {Lionel Henry and Hadley Wickham},
-  year = {2020},
-  note = {R package version 0.3.4},
-  url = {https://CRAN.R-project.org/package=purrr},
-}
-@Manual{R-RColorBrewer,
-  title = {RColorBrewer: ColorBrewer Palettes},
-  author = {Erich Neuwirth},
-  year = {2014},
-  note = {R package version 1.1-2},
-  url = {https://CRAN.R-project.org/package=RColorBrewer},
-}
-@Manual{R-readr,
-  title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester and Romain Francois},
-  year = {2018},
-  note = {R package version 1.3.1},
-  url = {https://CRAN.R-project.org/package=readr},
+  note = {R package version 4.7.0},
+  url = {https://CRAN.R-project.org/package=MBESS},
 }
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
@@ -87,41 +33,6 @@
   year = {2020},
   note = {R package version 2.2},
   url = {https://CRAN.R-project.org/package=rmarkdown},
-}
-@Manual{R-skimr,
-  title = {skimr: Compact and Flexible Summaries of Data},
-  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
-  year = {2020},
-  note = {R package version 2.1.1},
-  url = {https://CRAN.R-project.org/package=skimr},
-}
-@Manual{R-stringr,
-  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
-  author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.4.0},
-  url = {https://CRAN.R-project.org/package=stringr},
-}
-@Manual{R-tibble,
-  title = {tibble: Simple Data Frames},
-  author = {Kirill Müller and Hadley Wickham},
-  year = {2020},
-  note = {R package version 3.0.3},
-  url = {https://CRAN.R-project.org/package=tibble},
-}
-@Manual{R-tidyr,
-  title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Lionel Henry},
-  year = {2020},
-  note = {R package version 1.1.0},
-  url = {https://CRAN.R-project.org/package=tidyr},
-}
-@Manual{R-tidyverse,
-  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
-  author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.3.0},
-  url = {https://CRAN.R-project.org/package=tidyverse},
 }
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
@@ -131,14 +42,6 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://github.com/rstudio/bookdown},
-}
-@Book{ggplot22016,
-  author = {Hadley Wickham},
-  title = {ggplot2: Elegant Graphics for Data Analysis},
-  publisher = {Springer-Verlag New York},
-  year = {2016},
-  isbn = {978-3-319-24277-4},
-  url = {https://ggplot2.tidyverse.org},
 }
 @Book{knitr2015,
   title = {Dynamic Documents with {R} and knitr},
@@ -168,14 +71,4 @@
   year = {2018},
   note = {ISBN 9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
-}
-@Article{tidyverse2019,
-  title = {Welcome to the {tidyverse}},
-  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-  year = {2019},
-  journal = {Journal of Open Source Software},
-  volume = {4},
-  number = {43},
-  pages = {1686},
-  doi = {10.21105/joss.01686},
 }
